...
        NSApp.setActivationPolicy(.prohibited)
        
        // Create the status item in the menu bar
        statusItem = NSStatusBar.system.statusItem(withLength: NSStatusItem.variableLength)
        
        if let statusButton = statusItem?.button {
            statusButton.image = NSImage(systemSymbolName: "trash", accessibilityDescription: "Clean Cache")
            statusButton.action = #selector(togglePopover)
            statusButton.target = self
        }
        
        // Create the popover
        popover = NSPopover()
...
